# azure-func-sk-agent-cosmos-db

./: .funcignore  .gitignore  README.md  func_sk.rest  func_sk_agent.py  function_app.py  local.settings.sample.json  pyproject.toml  requirements-dev.txt  requirements.txt
